# cmake-30-minutes-talk

./: README.md
uno/: CMakeLists.txt  uno.cpp
